tests/rosetta/transpiler/php/9-billion-names-of-god-the-integer.bench
{main}
  thrown in /workspace/mochi/tests/rosetta/transpiler/php/9-billion-names-of-god-the-integer.php on line 137